# ptt

./: .gitignore  LICENSE  Main.hs  gentags.sh  ptt.cabal
src/Ptt/: Action.hs  Configuration.hs  Format.hs  Interval.hs  Options.hs  Parse.hs  Task.hs  Time.hs  Util.hs
src/Ptt/Time/: Clock.hs  Date.hs  Interval.hs
test/Ptt/: Arbitrary.hs  IntervalSpec.hs  TaskSpec.hs
test/Ptt/Time/: ClockSpec.hs  IntervalSpec.hs
