name:                ptt
version:             0.1.0.0
description:         Personal Task Tracker
license:             MIT
license-file:        LICENSE
author:              Jaakko Pallari
maintainer:          jkpl@lepovirta.org
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
    base >=4.6 && <4.7,
    time,
    text,
    containers,
    filepath,
    directory,
    old-locale,
    yaml ==0.8.8.3,
    optparse-applicative ==0.9.0
  default-language:    Haskell2010
  exposed-modules:
    Ptt.Interval
  ghc-options:
    -Wall

executable ptt
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >=4.6 && <4.7,
    ptt
  ghc-options:
    -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
  build-depends:
    base  >=4.6 && <4.7,
    ptt,
    hspec >= 1.3,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2

