name:                ptt
version:             0.1.0.0
description:         Personal Task Tracker
license:             MIT
license-file:        LICENSE
author:              Jaakko Pallari
maintainer:          jkpl@lepovirta.org
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:
    base >=4.6 && <4.7,
    time,
    text,
    containers,
    filepath,
    directory,
    old-locale,
    yaml ==0.8.8.3,
    optparse-applicative ==0.9.0
  default-language:    Haskell2010
  exposed-modules:
    Ptt.Util,
    Ptt.Time,
    Ptt.Time.Clock,
    Ptt.Time.Interval,
    Ptt.Task,
    Ptt.Format,
    Ptt.Options,
    Ptt.Action,
    Ptt.Configuration
  ghc-options:
    -Wall

executable ptt
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >=4.6 && <4.7,
    yaml ==0.8.8.3,
    time,
    text,
    filepath,
    directory,
    ptt
  ghc-options:
    -Wall

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:
    base  >=4.6 && <4.7,
    ptt,
    time,
    text,
    containers,
    hspec >= 1.3,
    QuickCheck,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2

